...
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_background">

        <ImageView
            android:id="@+id/ivWallpaper"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            tools:background="@color/gray_primary"
            android:contentDescription="@string/iv_wallpaper_desc" />

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:elevation="3dp"
            android:background="@drawable/bg_circle_black"
...
            android:src="@drawable/ic_arrow_back_yellow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/btn_back_desc" />

        <ImageView
            android:id="@+id/btnFavorite"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/bg_circle_black"
            android:padding="8dp"
...
            android:foreground="@drawable/bg_card_poster"
            app:cardCornerRadius="7dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/space">

            <ImageView
                android:id="@+id/ivPoster"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:contentDescription="@string/iv_poster_desc" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
...
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="@+id/tvTitle"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle">

            <TextView
                android:id="@+id/tvEpisodes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
...
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/bullet"
            app:layout_constraintStart_toEndOf="@+id/bullet"
            app:layout_constraintTop_toTopOf="@+id/bullet">

            <TextView
                android:id="@+id/tvSeasons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
...
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@+id/llSeasons"
            app:layout_constraintStart_toEndOf="@+id/llSeasons"
            app:layout_constraintTop_toTopOf="@+id/llSeasons" />

        <TextView
            android:id="@+id/tvRuntime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:fontFamily="@font/roboto_light"
            android:textColor="@color/white"
            android:textSize="14sp"
...
            android:src="@drawable/ic_star_yellow"
            app:layout_constraintStart_toStartOf="@+id/tvTitle"
            app:layout_constraintTop_toBottomOf="@+id/llEpisodes"
            android:contentDescription="@string/iv_rating_desc" />

        <TextView
            android:id="@+id/tvRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
...
            android:textColor="@color/gray_primary"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvRating"
            app:layout_constraintStart_toEndOf="@+id/tvRating" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvGenre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:clipToPadding="false"
            android:paddingStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
...
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvFirstAiring"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    tools:text="21 July, 2020" />
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvLastAiring"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    tools:text="12 April, 2021" />
...
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llAiring" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clWrapperSynopsis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/black_primary"
            android:paddingHorizontal="16sp"
            android:paddingVertical="12dp"
...
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/view"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvSynopsis"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ellipsize="end"
                android:fontFamily="@font/roboto_regular"
                android:lineSpacingExtra="5dp"
...
