...
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            tools:background="@color/gray_primary"
            android:contentDescription="@string/iv_wallpaper_desc" />

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:elevation="3dp"
            android:background="@drawable/bg_circle_black"
...
            android:src="@drawable/ic_arrow_back_yellow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/btn_back_desc" />

        <ImageView
            android:id="@+id/btnFavorite"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/bg_circle_black"
            android:padding="8dp"
...
